--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,54 @@
 version: '3.7'
 
 services:
+  comet:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: maguowei/goim
+    restart: always
+    environment:
+      - "DEBUG=${DEBUG}"
+    ports:
+      - "${API_PORT}:8000"
+    depends_on:
+      - redis
+      - zookeeper
+      - kafka
+    entrypoint: comet -conf=target/comet.toml -region=sh -zone=sh001 -deploy.env=dev -weight=10 -addrs=127.0.0.1 -debug=true 2>&1
+
+  logic:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: maguowei/goim
+    restart: always
+    environment:
+      - "DEBUG=${DEBUG}"
+    ports:
+      - "${API_PORT}:8000"
+    depends_on:
+      - redis
+      - zookeeper
+      - kafka
+    entrypoint: logic -conf=target/logic.toml -region=sh -zone=sh001 -deploy.env=dev -weight=10 2>&1
+
+  job:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: maguowei/goim
+    restart: always
+    environment:
+      - "DEBUG=${DEBUG}"
+    ports:
+      - "${API_PORT}:8000"
+    depends_on:
+      - redis
+      - zookeeper
+      - kafka
+    entrypoint: job -conf=target/job.toml -region=sh -zone=sh001 -deploy.env=dev 2>&1
+
   redis:
     image: redis
     restart: always
@@ -11,12 +59,14 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper
+    restart: always
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
   kafka:
     image: confluentinc/cp-kafka
+    restart: always
     depends_on:
       - zookeeper
     ports:
