--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,15 +7,17 @@ services:
       dockerfile: Dockerfile
     image: maguowei/goim
     restart: always
-    environment:
-      - "DEBUG=${DEBUG}"
+    env_file: .env
     ports:
-      - "${API_PORT}:8000"
+      - "3101:3101"
+      - "3102:3102"
+      - "3109:3009"
     depends_on:
       - redis
       - zookeeper
       - kafka
-    entrypoint: comet -conf=target/comet.toml -region=sh -zone=sh001 -deploy.env=dev -weight=10 -addrs=127.0.0.1 -debug=true 2>&1
+      - discovery
+    entrypoint: comet
 
   logic:
     build:
@@ -23,15 +25,16 @@ services:
       dockerfile: Dockerfile
     image: maguowei/goim
     restart: always
-    environment:
-      - "DEBUG=${DEBUG}"
+    env_file: .env
     ports:
-      - "${API_PORT}:8000"
+      - "3111:3111"
+      - "3119:3119"
     depends_on:
       - redis
       - zookeeper
       - kafka
-    entrypoint: logic -conf=target/logic.toml -region=sh -zone=sh001 -deploy.env=dev -weight=10 2>&1
+      - discovery
+    entrypoint: logic
 
   job:
     build:
@@ -39,15 +42,22 @@ services:
       dockerfile: Dockerfile
     image: maguowei/goim
     restart: always
-    environment:
-      - "DEBUG=${DEBUG}"
-    ports:
-      - "${API_PORT}:8000"
+    env_file: .env
     depends_on:
       - redis
       - zookeeper
       - kafka
-    entrypoint: job -conf=target/job.toml -region=sh -zone=sh001 -deploy.env=dev 2>&1
+      - discovery
+    entrypoint: job
+
+  discovery:
+    build:
+      context: .
+      dockerfile: discovery.Dockerfile
+    image: maguowei/discovery
+    restart: always
+    ports:
+      - "7171:7171"
 
   redis:
     image: redis
